--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,3 @@
 {
-  "version": 2,
-  "buildCommand": "pnpm install --frozen-lockfile && pnpm build",
-  "installCommand": "pnpm install --frozen-lockfile",
-  "env": {
-    "NODE_ENV": "production"
-  },
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "dist/index.js"
-    }
-  ]
-}
+  "version": 2
+}}
