--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,7 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "dist/index.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "dist/index.js"
-    }
-  ],
+  "buildCommand": "pnpm build",
+  "outputDirectory": "dist",
   "env": {
     "NODE_ENV": "production"
   }
